deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: acme-challenge-test
  name: acme-challenge-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acme-challenge-test
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: acme-challenge-test
    spec:
      containers:
      - image: docker.io/regionorebrolan/acme-challenge-test:v1.0
        imagePullPolicy: Always
        name: acme-pod
        resources: {}
status: {}
