ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-challenge-test
  labels:
    app: acme-challenge-test
  creationTimeStamp: null
spec:
  rules:
  - host: id-development.regionorebrolan.se
    http:
      paths:
      - backend:
          service:
            name: acme-challenge-test
            port:
              number: 5000
        path: /.well-known/acme-challenge/asdf1234
        pathType: ImplementationSpecific
status: {}
