route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: acme-test
spec:
  host: forskning.sbr.dev.biobanksverige.se
  path: /.well-known/acme-challenge
  port:
    targetPort: 5000
  to:
    kind: Service
    name: acme-test
    weight: 100
  wildcardPolicy: None
status: {}
